# python-empirical-standards

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: README.md  benchmark_manifest.csv  fixest_iv_results.csv  generate_fixture.py  iv_fixture.csv  python_iv_relevance_robust_results.csv  python_iv_results.csv  python_panel_iv_results.csv  r_iv_relevance_robust_results.csv  r_panel_iv_results.csv  run_fixest_iv.R  run_python_iv.py  run_python_iv_relevance.py  run_python_panel_iv.py  run_r_iv_relevance.R  run_r_panel_iv.R
docs/: backend_policy.md  capability_matrix.md  data_validation.md  iv.md  model_selection.md  ols.md  panel_and_did.md  panel_iv_and_ar.md  reporting.md  results.md  robust_inference.md  staggered_did_audit.md
examples/: data_validation_example.py  ols_example.py  panel_did_example.py
r/: README.md  dependencies.R
skills/apply-empirical-standards/: SKILL.md
skills/apply-empirical-standards/agents/: openai.yaml
skills/apply-empirical-standards/references/: api-patterns.md  method-selection.md  output-checklist.md
skills/apply-empirical-standards/scripts/: check_environment.py
src/empirical_standards/: __init__.py
src/empirical_standards/causal/: __init__.py  did.py  r_backends.py  staggered.py  sun_abraham.py
src/empirical_standards/data/: __init__.py  merge.py  panel.py
src/empirical_standards/diagnostics/: __init__.py  heterogeneity.py  r_inference.py  robustness.py
src/empirical_standards/experimental/: __init__.py
src/empirical_standards/models/: __init__.py  iv.py  iv_diagnostics.py  iv_inference.py  iv_relevance.py
tests/: test_agent_skill.py  test_cross_software.py  test_data_validation.py  test_effect_data.py  test_iv.py  test_ols.py  test_panel_causal.py  test_panel_iv_ar.py  test_result_metadata.py  test_robust_inference.py
(+8 files in other folders)
